force-app/main/default/objects/FeesNew__c/FeesNew__c.object-meta.xml
<CustomObject>
    <label>Fees</label>
    <nameField>
        <displayFormat>RCPT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>