force-app/main/default/objects/FeesNew__c/fields/Cheque_UPI_number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_UPI_number__c</fullName>
    <label>Cheque / UPI number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>