force-app/main/default/objects/FeesNew__c/fields/DateOfDeposit__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeposit__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Of Deposit</label>
    <type>Date</type>
</CustomField>