force-app/main/default/objects/FeesNew__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EnrollmentNew__c.Balance_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EnrollmentNew__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>