force-app/main/default/objects/FeesNew__c/fields/ModeOfPayment__c.field-meta.xml
<CustomField>
    <fullName>ModeOfPayment__c</fullName>
    <label>Mode Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>