force-app/main/default/objects/FeesNew__c/validationRules/Check_UPI_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_UPI_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR( ISPICKVAL( ModeOfPayment__c , &apos;UPI&apos;) ,
     ISPICKVAL( ModeOfPayment__c , &apos;Cheque&apos;)
  ),
    ISBLANK( Cheque_UPI_number__c ) 
)</errorConditionFormula>
    <errorMessage>Check or UPI number is required if payment is done through cheque or UPI</errorMessage>
</ValidationRule>