force-app/main/default/objects/FeesNew__c/validationRules/FeeDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   DateOfDeposit__c &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>Fees date cannot be the the future date</errorMessage>
</ValidationRule>