force-app/main/default/objects/FeesNew__c/validationRules/FeesAmountValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FeesAmountValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &gt;   Enrollment__r.Balance_Amount__c</errorConditionFormula>
    <errorMessage>Fees Paid cannot be greater than the total fees</errorMessage>
</ValidationRule>